add chooseRandomToy method